--- a/assets/main.scss
+++ b/assets/main.scss
@@ -136,7 +136,7 @@ a:hover {
   padding-bottom: 40px;
 }
 .content {
-  max-width: 800px;
+  max-width: 900px;
   margin: 0 auto;
   padding: 0 40px;
 }
@@ -396,6 +396,7 @@ figcaption {
 .atlas-gallery {
   img {
     display: block;
+    margin: auto;
   }
   select {
     width: 100%;
@@ -404,7 +405,7 @@ figcaption {
 @media (min-width: 1064px) {
   .atlas-gallery {
     img {
-      padding: 0 159px;
+      max-width: 320px;
     }
   }
 }
@@ -447,9 +448,20 @@ figcaption {
 .heroinfobox {
   padding: 2px;
   margin-bottom: 10px;
+  display: grid;
+}
+@media (min-width: 1064px) {
+  .heroinfobox {
+    grid-template-columns: 320px auto;
+    gap: 5px;
+  }
 }
 .heroinfobox .header {
-  padding: 5px;
+  padding: 10px;
+}
+.heroinfobox .name {
+  font-size: 40px;
+  font-weight: 700;
 }
 .heroinfobox table {
   margin: 0;
@@ -462,7 +474,7 @@ $elementColor: #f07d75, #88bcff, #5fcb58, #ffb251, #b88dff;
       background: $color;
     }
     .heroinfobox {
-      border: 1px solid $color;
+      border: 2px solid $color;
     }
     summary {
       background-color: $color;
