--- a/_includes/hero-infobox.html
+++ b/_includes/hero-infobox.html
@@ -19,39 +19,7 @@
 {% assign overridejob = site.data.processed.jp_profile[cardProfileOverride.job] %}
 
 <div id="h{{ include.stockId }}" role="tabpanel" tabindex="0"  class="tabcontent contain element{{ firstCardInfo.element }}">
-    <div class="heroinfobox">
-        <div class="header">
-            <div class="name">{{ firstCardInfo.stockId | stockIdToCharaTitle: 1 }}</div>
-            <div class="sub">{{ firstCardInfo.cardName }}</div>
-        </div>
-        {% include atlas-gallery.html sprites=sprites %}
-        <table>
-            <tbody>
-                <tr>
-                    <th>Attribute</th>
-                    <td>{% include hero-element.html element=firstCardInfo.element %}</td>
-                    <th>Role</th>
-                    <td>{% include hero-role.html role=firstCardInfo.role %}</td>
-                </tr>
-                <tr>
-                    <th colspan="2">Illustration</th>
-                    <td colspan="2">{% include chara-illustrator.html illustrator=firstCardInfo.illustrator override=overrideIllustrator %}</td>
-                </tr>
-                <tr>
-                    <th colspan="2">Voice</th>
-                    <td colspan="2">{% include chara-voice-actor.html cv=firstCardInfo.characterVoice %}</td>
-                </tr>
-                <tr>
-                    <th colspan="2">Occupation</th>
-                    <td colspan="2">{% if overridejob %}<span class="masked">{% endif %}{{ firstCardInfo.job }}{% if overridejob %}</span>{% endif %}</td>
-                </tr>
-                <tr>
-                    <th colspan="2">Affliation office</th>
-                    <td colspan="2">{% include chara-affiliation.html affiliation=firstCardInfo.affiliationOffice override=overrideAffiliation %}</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+{% include hero-infobox-profile.html stockId=include.stockId firstCardInfo=firstCardInfo sprites=sprites isHero=true %}
 
 {% assign detail_prefix = firstCardInfo.resourceName | upcase | prepend: "DETAIL_" %}
 {% assign bio_h01 = detail_prefix | append: "_H01" %}
