--- a/_includes/sidekick-infobox.html
+++ b/_includes/sidekick-infobox.html
@@ -13,39 +13,9 @@
 {% endif %}
 
 {% assign stockId = include.stockId | downcase %}
-{% assign cardProfileOverride = site.data.processed.CardProfileOverride[stockId].sidekick %}
-{% assign overrideIllustrator = site.data.processed.jp_profile[cardProfileOverride.illustrator] %}
-{% assign overrideAffiliation = site.data.processed.jp_profile[cardProfileOverride.affiliation] %}
-{% assign overridejob = site.data.processed.jp_profile[cardProfileOverride.job] %}
 
 <div id="s{{ include.stockId }}" role="tabpanel" tabindex="0"  class="tabcontent contain elementNone">
-    <div class="heroinfobox">
-        <div class="header">
-            <div class="name">{{ page.title }}</div>
-            <div class="sub">{{ firstCardInfo.cardName }}</div>
-        </div>
-        {% include atlas-gallery.html sprites=sprites %}
-        <table>
-            <tbody>
-                <tr>
-                    <th colspan="2">Illustration</th>
-                    <td colspan="2">{% include chara-illustrator.html illustrator=firstCardInfo.illustrator override=overrideIllustrator %}</td>
-                </tr>
-                <tr>
-                    <th colspan="2">Voice</th>
-                    <td colspan="2">{% include chara-voice-actor.html cv=firstCardInfo.characterVoice %}</td>
-                </tr>
-                <tr>
-                    <th colspan="2">Occupation</th>
-                    <td colspan="2">{% if overridejob %}<span class="masked">{% endif %}{{ firstCardInfo.job }}{% if overridejob %}</span>{% endif %}</td>
-                </tr>
-                <tr>
-                    <th colspan="2">Affliation office</th>
-                    <td colspan="2">{% include chara-affiliation.html affiliation=firstCardInfo.affiliationOffice override=overrideAffiliation %}</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+{% include hero-infobox-profile.html stockId=include.stockId firstCardInfo=firstCardInfo sprites=sprites %}
 
 {% assign detail_prefix = firstCardInfo.resourceName | upcase | prepend: "DETAIL_" %}
 {% assign bio_s01 = detail_prefix | append: "_S01" %}
