--- a/_layouts/chara.html
+++ b/_layouts/chara.html
@@ -120,7 +120,7 @@ layout: markdownify
 
 {% if trueSelf %}
 <details open markdown="1">
-<summary>True Story</summary>
+<summary>True Self</summary>
 
 {{ trueSelf }}
 
