--- a/_includes/hero-infobox-profile.html
+++ b/_includes/hero-infobox-profile.html
@@ -49,11 +49,11 @@
                 <td colspan="2">{{ page.profile.birthplace }}</td>
             </tr>
             <tr>
-                <th colspan="2">Age</th>
+                <th colspan="2"><abbr class="tippy" data-content="Converted to Earth Calendar">Age</abbr></th>
                 <td colspan="2">{{ page.profile.age }}</td>
             </tr>
             <tr>
-                <th colspan="2">Birthday</th>
+                <th colspan="2"><abbr class="tippy" data-content="Converted to Earth Calendar">Birthday</abbr></th>
                 <td colspan="2">{{ page.profile.birthday }}</td>
             </tr>
             <tr>
