--- a/_layouts/chara.html
+++ b/_layouts/chara.html
@@ -55,7 +55,7 @@ layout: markdownify
         <ul>
         {% for chapterId in characterStory.mainChapterIds %}
         {% assign chapter = site.main_quests | where: "chapterId", chapterId | first %}
-        <li><a href="{{ chapter.url }}">{{ chapter.title }}</a></li>
+        <li><a href="{{ chapter.url }}">Chapter {{ chapter.book }}-{{ chapter.chapter }}: {{ chapter.title }}</a></li>
         {% endfor %}
         </ul>
     </td>
