--- a/_layouts/main_quest.html
+++ b/_layouts/main_quest.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="page-header">
-<h1><a href="{{ page.url }}">Main Quest: {{ page.title }}</a></h1>
+<h1><a href="{{ page.url }}">Main Quest {{ page.book }}-{{page.chapter }}: {{ page.title }}</a></h1>
 </div>
 
 <h2>Quest Details</h2>
