--- a/assets/main.scss
+++ b/assets/main.scss
@@ -288,7 +288,7 @@ details {
   contain: content;
   border: 1px solid #aaa;
 
-  p, ul, ol, table, blockquote {
+  >p, >ul, >ol, >table, >blockquote {
     margin: 15px;
   }
   blockquote {
