--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -8,7 +8,7 @@ layout: default
 {{ page.title | default: page.jp_title }}</a></h1>
 </div>
 
-<table class="event-infobox">
+<table id="event-{{ page.eventId }}" class="event-infobox">
 <tr><th colspan="2">{{ page.title | default: page.jp_title }}</th></tr>
 <tr><td colspan="2"><img width="600" height="191" style="width: 100%" src="/cdn/Sprite/{{ page.banner_image }}" loading="lazy"></td></tr>
 <tr><th colspan="2">Duration</th></tr>
@@ -28,3 +28,26 @@ layout: default
 </table>
 
 {{ content }}
+
+{% assign eventId = page.eventId | downcase %}
+{% assign regionId = site.data.EventMaster[eventId].eventPortalJson.salesRegionIds[0] | downcase %}
+{% assign sales_reports = site.data.processed.sales_report_master[regionId] %}
+
+{% if sales_reports.size > 0 %}
+<h2 id="event-sales-report">Event Sales Report</h2>
+
+{% for sales_report in sales_reports %}
+
+<details><summary>{{ sales_report }}</summary>
+<p>{{ site.data.processed.jp_sales_report[sales_report] }}</p>
+</details>
+
+{% assign translated_sales_report = site.data.wiki.SalesReport[sales_report] %}
+{% if translated_sales_report %}
+<details><summary>{{ sales_report }} (Translated)</summary>
+<p>{{ translated_sales_report }}</p>
+</details>
+{% endif %}
+
+{% endfor %}
+{% endif %}
