--- a/assets/main.scss
+++ b/assets/main.scss
@@ -355,6 +355,9 @@ figure img {
   display: block;
   margin: auto;
 }
+.apache-chart {
+  width: 100%;
+}
 figcaption {
   font-size: 13px;
   background-color: #fff9c4;
