--- a/_includes/apache-chart.html
+++ b/_includes/apache-chart.html
@@ -1,6 +1,8 @@
 {% assign aspectRatio = include.aspectRatio | default: "3 / 2" %}
 <figure>
-<div class="apache-chart" style="aspect-ratio: {{ aspectRatio }}" data-options="{{ include.options | escape }}"></div>
+<div class="apache-chart" style="aspect-ratio: {{ aspectRatio }}">
+<script type="application/json">{{ include.options }}</script>
+</div>
 {% if include.title %}
 <figcaption>{{ include.title }}</figcaption>
 {% endif %}
