--- a/_includes/skill-table-v2.html
+++ b/_includes/skill-table-v2.html
@@ -8,9 +8,10 @@
 {% assign sid = id | downcase %}
 {% assign skill = site.data.SkillMaster[sid] %}
 {% assign skillName = site.data.translation.Skill[sid].skillName %}
+{% assign index = include.index | default: forloop.index %}
     <div title="{{ sid }}" class="translate re-A" data-translate="{% if skillName %}{{ skill.skillName }}{% endif %}" data-effects="{{skill.effects | map: 'skillEffectId' | join: ',' }}">{{ skillName | default: skill.skillName }}</div>
     <div class="re-C">{{ skill.useView}}</div>
-    <div class="re-B">{% include skill-description.html skillId=nid skill=skill %}</div>
+    <div class="re-B">{% include skill-description.html skillId=nid index=index changeSkillIds=include.changeSkillIds %}</div>
 {% endfor %}
 
 {% if include.split != true or include.last == true %}
