show quest enemy spd and hint

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -743,4 +743,10 @@ $elementName: fire, water, earth, light, shadow;
     width: 64px;
     height: 64px;
   }
+  .enemy-info-row {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+  }
 }
