--- a/assets/main.scss
+++ b/assets/main.scss
@@ -203,7 +203,7 @@ time {
   padding-left: 20px;
 }
 p, ul, ol, table, pre, dl {
-  margin: 0 0 20px;
+  margin: 20px 0;
 }
 ul ul, ol ol, ul ol, ol ul {
   margin: 0;
