--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,11 @@ layout: compress
 {% include header.html %}
 <main class="content__area">
 <div class="content{% if page.wide_content %}__wider{% endif %}">
-    <!--<aside class="wiki-msg">    
-        LAH community survey and popularity poll (2025 edition) has ended. Results will be published by the end of October 2025.
-    </aside>-->
-    <aside class="wiki-msg">    
-        <a href="/blog/2025/open-letter-to-lw/">Open Letter to LifeWonders</a> regardng the status of official translation (2025-09-30)
+    <aside class="wiki-msg">
+        Community survey report (2025) is available now!
+        [<a href="/blog/2025/community-survey-2025/">English version</a>]
+        [<a href="/blog/2025/community-survey-2025.jp/">日本語版</a>]
+    </aside>
     </aside>
     <aside class="toolbar clearfix">
     <button class="menu-button" title="Open Menu" aria-label="Open Menu">
