--- a/assets/main.scss
+++ b/assets/main.scss
@@ -203,7 +203,7 @@ time {
   padding-left: 20px;
 }
 p, ul, ol, table, pre, dl {
-  margin: 0 0 20px;
+  margin: 20px 0;
 }
 ul ul, ol ol, ul ol, ol ul {
   margin: 0;
@@ -303,7 +303,7 @@ details {
   contain: content;
   border: 1px solid #aaa;
 
-  p, ul, ol, table, blockquote {
+  >p, >ul, >ol, >table, >blockquote {
     margin: 15px;
   }
   blockquote {
@@ -369,6 +369,9 @@ figure {
 figure img {
   display: block;
   margin: auto;
+}
+.apache-chart {
+  width: 100%;
 }
 figcaption {
   font-size: 13px;
