--- a/_includes/sidekick-infobox.html
+++ b/_includes/sidekick-infobox.html
@@ -24,11 +24,11 @@
 <p>{{ site.data.processed.jp_bio[bio_s01] }}</p>
 </details>
 {% if include.BIO_S01 != "" %}
-<details open>
+<details open markdown="1">
 <summary>Side Story (Translated)</summary>
-<div markdown="block">
+
 {{ include.BIO_S01 }}
-</div>
+
 </details>
 {% endif %}
 
