--- a/assets/main.scss
+++ b/assets/main.scss
@@ -251,7 +251,7 @@ code, pre {
 blockquote {
   border-left: 3px solid #1de9b6;
   margin: 24px 0;
-  padding: 12px 12px 1px;
+  padding: 1px 12px;
   font-style: italic;
 }
 table {
@@ -305,9 +305,6 @@ details {
 
   >p, >ul, >ol, >table, >blockquote {
     margin: 15px;
-  }
-  blockquote {
-    padding: 1px;
   }
 
   table {
