sidebar list style tweak
should have done this 5 years ago

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -103,7 +103,7 @@ a:hover {
   margin-bottom: 10px;
 }
 .sidebar li {
-  list-style: none;
+  list-style: square;
 }
 .search-box {
   margin-bottom: 20px;
