--- a/assets/main.scss
+++ b/assets/main.scss
@@ -750,3 +750,21 @@ $elementName: fire, water, earth, light, shadow;
     gap: 10px;
   }
 }
+.screenshot {
+  max-height: min(700px, 100vh);
+  width: auto;
+  max-width: 100%;
+  --font-size: 30px;
+}
+.screenshot text {
+  font: bold var(--font-size) sans-serif;
+  fill: white;
+}
+.image-mapper-shape {
+  fill: rgba(0, 0, 0, 0.5);
+  stroke: white;
+  stroke-width: 5px;
+}
+g:hover .image-mapper-shape {
+  opacity: 20%;
+}
