Move friend support to its own page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -123,6 +123,9 @@
             <a href="/guide/battle/">Battle</a>
           </li>
           <li>
+            <a href="/guide/friend_support/">Friend Support</a>
+          </li>
+          <li>
             <a href="/guide/quest/">Quest</a>
           </li>
           <li>
