More dark switch

--- a/_sass/_main2.scss
+++ b/_sass/_main2.scss
@@ -5,14 +5,38 @@
   --colorLight: #ffd95b;
   --colorPrimary: #ffa726;
   --colorDark: #c77800;
-  --colorGrey: #ccc;
+  --colorGrey: #aaa;
   --text: #000;
   --textLight: #fff;
+  --link: var(--colorDark);
   --bg: #fafafa;
+  --notiBg: #cce7ff;
+
+  --fire: #f07d75;
+  --water: #88bcff;
+  --earth: #5fcb58;
+  --light: #ffb251;
+  --shadow: #b88dff;
 
   --silver: #d0d0d0;
   --gold: linear-gradient(195deg, #f0b050, #ffe080, #f0b050);
   --rainbow: linear-gradient(195deg, #ff8080, #ffff80, #80ff80, #80ffff, #8080ff);
+}
+
+html[data-theme="dark"] {
+  --colorGrey: #555;
+
+  --text: #fff;
+  --textLight: #000;
+  --link: var(--colorLight);
+  --bg: #0f0f1f;
+  --notiBg: #2989dd;
+
+  --fire: #a50b00;
+  --water: #0c4b9e;
+  --earth: #087800;
+  --light: #e3891a;
+  --shadow: #4e1aa1;
 }
 
 *, *:before, *:after {
@@ -20,6 +44,7 @@
 }
 html, body {
   font: 400 16px Roboto, Arial, sans-serif;
+  color:  var(--text);
   margin: 0;
   padding: 0;
   height: 100%;
@@ -43,10 +68,10 @@ header {
 }
 .wiki-msg {
   padding: 10px;
-  background: #cce7ff;
+  background: var(--notiBg);
 }
 a {
-  color: var(--colorDark);
+  color: var(--link);
   text-decoration: none;
 }
 a:hover {
@@ -97,7 +122,7 @@ a:hover {
   padding: 40px;
 }
 .sidebar a {
-  color: var(--text);
+  color: #000;
 }
 .section__header {
   font-size: 1em;
@@ -250,7 +275,7 @@ code {
 code, pre {
   font: 14px Consolas, "Liberation Mono", Menlo, Courier, monospace;
   line-height: 1.45;
-  background-color: #eee;
+  background-color: var(--colorGrey);
 }
 blockquote {
   border-left: 3px solid #1de9b6;
@@ -283,7 +308,7 @@ th {
 }
 .bordered {
   th, td {
-    border: 1px solid #000;
+    border: 1px solid var(--text);
   }
 }
 .sort-table {
@@ -305,7 +330,7 @@ th {
 }
 details {
   contain: content;
-  border: 1px solid #aaa;
+  border: 1px solid var(--colorGrey);
 
   >p, >ul, >ol, >table, >blockquote {
     margin: 15px;
@@ -329,7 +354,7 @@ hr {
   display: block;
   height: 1px;
   border: 0;
-  border-top: 1px solid #ccc;
+  border-top: 1px solid var(--colorGrey);
   margin: 1em 0;
   padding: 0
 }
@@ -508,19 +533,19 @@ figcaption {
 }
 
 .element1 {
-  --color: #f07d75;
+  --color: var(--fire);
 }
 .element2 {
-  --color: #88bcff;
+  --color: var(--water);
 }
 .element3 {
-  --color: #5fcb58;
+  --color: var(--earth);
 }
 .element4 {
-  --color: #ffb251;
+  --color: var(--light);
 }
 .element5 {
-  --color: #b88dff;
+  --color: var(--shadow);
 }
 .elementNone {
   --color: var(--colorGrey);
