--- a/_sass/_main2.scss
+++ b/_sass/_main2.scss
@@ -15,7 +15,7 @@
   --notiBg: #cce7ff;
 
   --sectionHeader: rgb(94 203 140);
-  --sectionBg: #077c53;
+  --sectionBg: #d3f8eb;
 
   --fire: #f07d75;
   --water: #88bcff;
@@ -40,7 +40,7 @@ html[data-theme="dark"] {
   --link: var(--color100);
   --bg: #0f0f1f;
   --notiBg: #2989dd;
-  --sectionHeader: rgb(94 203 140);
+  --sectionHeader: rgb(18, 195, 92);
   --sectionBg: #077c53;
 
   --fire: #a50b00;
