--- a/_sass/_main2.scss
+++ b/_sass/_main2.scss
@@ -39,7 +39,7 @@ html[data-theme="dark"] {
   --textLight: #000;
   --link: var(--color100);
   --bg: #0f0f1f;
-  --notiBg: #2989dd;
+  --notiBg: #11538d;
   --sectionHeader: rgb(18, 195, 92);
   --sectionBg: #077c53;
 
