--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,6 +33,7 @@
   <link rel="stylesheet" type="text/css" href="/assets/main.css">
   <link rel="canonical" href="{{ site.url }}{{ page.url | replace: 'index.html', '' }}">
   {% for s in page.additional_styles %}<link rel="stylesheet" href="{{ s }}">{% endfor %}
+  <script>{% include js/theme.js %}</script>
 </head>
 
 <body>
