--- a/_sass/_theme-button.scss
+++ b/_sass/_theme-button.scss
@@ -1,9 +1,5 @@
 @import "https://unpkg.com/open-props/easings.min.css";
 
-.theme-toggle {
-  float: right;
-}
-
 .sun-and-moon> :is(.moon, .sun, .sun-beams) {
   transform-origin: center;
 }
@@ -77,5 +73,40 @@
   [data-theme="dark"] .sun-and-moon>.moon>circle {
     transition-duration: .5s;
     transition-delay: .25s;
+  }
+}
+
+.theme-toggle {
+  --size: 2rem;
+  --icon-fill: hsl(210 10% 30%);
+  --icon-fill-hover: hsl(210 10% 15%);
+  background: none;
+  border: none;
+  padding: 0;
+  inline-size: var(--size);
+  block-size: var(--size);
+  aspect-ratio: 1;
+  border-radius: 50%;
+  cursor: pointer;
+  touch-action: manipulation;
+  -webkit-tap-highlight-color: transparent;
+  outline-offset: 5px;
+  float: right;
+}
+
+.theme-toggle>svg {
+  inline-size: 100%;
+  block-size: 100%;
+  stroke-linecap: round
+}
+
+[data-theme=dark] .theme-toggle {
+  --icon-fill: hsl(210 10% 70%);
+  --icon-fill-hover: hsl(210 15% 90%)
+}
+
+@media (hover: none) {
+  .theme-toggle {
+    --size: 48px
   }
 }
